@@ -1,3 +1,11 @@
+2024-12-14  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-blinks.el (eek2, ee-eek2): new functions.
+
+2024-12-10  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-tlinks.el (find-yttranscript-links): small changes.
+
 2024-12-07  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-videolinks.el (ee-1stclassvideos-info): new video, with
